--- a/style.css
+++ b/style.css
@@ -61,3 +61,13 @@ body{
 a{
     color: red;
 }
+
+p{
+    margin-top: 10px;
+    line-height: 0rem;
+    font-size: 14px;
+}
+
+.bodyfile .top{
+    margin-top: 40px;
+}
